# hft-dojo

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  array.cpp  array.hpp  array.test.cpp  assert.hpp  branchless.cpp  branchless.hpp  common.hpp  compile_commands.json  demangle.hpp  events.hpp  flat_hash.cpp  flat_hash.hpp  flat_list.cpp  flat_list.hpp  flat_list.test.cpp  flat_queue.cpp  flat_queue.hpp  flat_queue_oa.cpp  flat_queue_oa.hpp  flat_tree_avl.cpp  flat_tree_avl.hpp  flat_tree_bs.cpp  flat_tree_bs.hpp  flat_tree_splay.cpp  flat_tree_splay.hpp  gdb_utils.py  likely.hpp  main  main.cpp  map_reduce.cpp  map_reduce.hpp  map_reduce.test.cpp  matching_engine.cpp  matching_engine.hpp  object_pool.cpp  object_pool.hpp  (+34 more)
benchmarks/: trade_engine_bench.cpp
tests/: array_test.cpp  branchless_test.cpp  flat_list_test.cpp  order_book_test.cpp  price_levels_test.cpp  task_worker_test.cpp  trade_engine_test.cpp
